--- a/src/pages/About/Slpa/slpa.css
+++ b/src/pages/About/Slpa/slpa.css
@@ -196,48 +196,76 @@ body {
     }
   }
   /* Content from the Slpa Component */
-  .ports-container h4 {
+.ports-container h4 {
     color: #236F86;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    margin-left: 50px;
+    margin-top: 30px;
   }
-
   
   iframe {
-    max-width: 100%;
-    height:500px;
+    max-width: 75%;
+    height: 100%;
+    margin-top: 20px;
+    margin-left: 100px;
   }
-
-  .his-con{
+  
+  .his_con {
     display: flex;
-  flex-direction: column;
-  gap: 85px;
-  justify-content: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 20px;
   }
-
-  .his{
-    background: #fff;
-  overflow: hidden;
-  width: 50%;
-  height: 400px;
+  
+  .his {
+    width: 48%; /* Adjust as needed for the layout */
+    box-sizing: border-box;
   }
+  
+  .video-container iframe {
+    width: 100%;
+    height: 300px; /* Adjust height as needed */
+  }
+  
+  .history-container h4 {
+    color: #236F86;
+    margin-top: -30px;
+    margin-bottom: 20px;
+    text-align: center;
+    margin-right: 100px;
+  }
+  
+  .history-container p {
+    text-align: justify;
+    line-height: 1.5;
+    margin-top: 10px;
+    margin-right: 100px;
+  }
+  
 
   .abouttable {
-    width: 100%;
+    width: 75%;
     border-collapse: collapse;
     margin-top: 20px;
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+    margin-left: 180px;
+    margin-right: 180px;
+  }
+
+  .abouttable h4{
+    text-align: center;
+    margin-top: 10px;
   }
   
   .abouttable th,
   .abouttable td {
-    border: 1px solid #ddd;
+    border: 3px solid #f7ad0e;
     padding: 8px;
-    text-align: left;
+    text-align: justify;
+
+   
   }
   
   .abouttable th {
