--- a/src/components/Common/Footer/footer.css
+++ b/src/components/Common/Footer/footer.css
@@ -94,6 +94,9 @@
   background-color: #000000;
   color: #ffffff;
   /* margin-top: 0px; */
+  position: absolute; /* Stick to the bottom */
+  bottom: 0;
+  left: 0; 
 }
 
 .footer-bottom-left,
