--- a/src/pages/About/Boardofdirectors/boardofdirectors.css
+++ b/src/pages/About/Boardofdirectors/boardofdirectors.css
@@ -60,7 +60,7 @@ body {
     width: 150px;
     height: 300px;
   }
-
+   
   h6{
     margin-left: 0px;
   }
@@ -74,11 +74,9 @@ body {
   }
 
 .img-responsive11 {
-    width: 50%;
-    height: 80%;
-    object-fit: cover;
-    margin-left: 0px;
-    margin-top: 20px;
+  width: 250px;
+  height: 300px;
+   margin-right: 20%;
 }
 @media (max-width: 768px) {
     .raw1 .col-md-41 {
@@ -86,6 +84,7 @@ body {
         height: 150px !important;
         margin-left: 50px;
     }
+    
 }
 
   .col-md-12-2{
@@ -99,3 +98,4 @@ body {
     margin-bottom: -10px;
     color: rgb(92, 91, 91);
   }
+  
