--- a/src/components/ContactBanner/contactbanner.css
+++ b/src/components/ContactBanner/contactbanner.css
@@ -1,5 +1,5 @@
 /* Container for Small Boxes */
-.aboutbanner-small-boxes-container {
+.contactbanner-small-boxes-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -17,7 +17,7 @@
   
   
 /* Individual Small Box */
- .aboutbanner-small-box {
+ .contactbanner-small-box {
     width: 150px;
     height: 50px;
     background-color: #3b82f6; 
@@ -38,21 +38,21 @@
 }
 
 /* Hover Effect */
-.aboutbanner-box:hover {
+.contactbanner-box:hover {
     transform: translateY(-3px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Two Columns on Mobile */
 @media (max-width: 768px) {
-    .aboutbanner-small-boxes-container {
+    .contactbanner-small-boxes-container {
         grid-template-columns: repeat(2, 1fr); /* Two columns on tablets & mobile */
         width: 100%;
         margin: 0 auto;
         position: static;
     }
 
-    .aboutbanner-small-box {
+    .contactbanner-small-box {
         display: block; /* Removes flex */
         text-align: center; /* Keeps the text centered */
         font-size: 12px;
@@ -63,14 +63,14 @@
 /* Two Columns on Small Phones */
 @media (max-width: 480px) {
 
-    .aboutbanner-boxes-container {
+    .contactbanner-boxes-container {
         grid-template-columns: repeat(2, 1fr) !important; /* Two columns on tablets & mobile */
         width: 100%;
         margin: 0 auto;
         position: static;
     }
 
-    .aboutbanner-small-box {
+    .contactbanner-small-box {
         display: block; /* Removes flex */
         text-align: center; /* Keeps the text centered */
         font-size: 12px;
